--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,9 +31,9 @@
                             <!--/*@thymesVar id="recipe" type="guru.springframework.springrecipe.domain.Recipe"*/-->
                             <td class="table-cell" th:text="${recipe.id}"></td>
                             <td class="table-cell" th:text="${recipe.description}"></td>
-                            <td class="table-cell"><a href="#" th:href="@{'/recipe/show/' + ${recipe.id}}">View</a></td>
-                            <td class="table-cell"><a href="#" th:href="@{'/recipe/update/' + ${recipe.id}}">Update</a></td>
-                            <td class="table-cell"><a class="fa fa-trash-o" href="#" th:href="@{'/recipe/delete/' + ${recipe.id}}"></a></td>
+                            <td class="table-cell"><a href="#" th:href="@{'/recipe/'+${recipe.id}+'/show'}">View</a></td>
+                            <td class="table-cell"><a href="#" th:href="@{'/recipe/'+${recipe.id}+'/update'}">Update</a></td>
+                            <td class="table-cell"><a class="fa fa-trash-o" href="#" th:href="@{'/recipe/'+${recipe.id}+'/delete'}"></a></td>
                         </tr>
                         </tbody>
                     </table>
