finished CRUD Ingredients and Recipes with tests

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,9 +10,8 @@
         <div class="col-lg-9 mx-auto">
             <div class="card border-primary">
                 <div class="card-header bg-primary text-white">
-                    <h1 class="card-title">My Index Template recipe</h1>
+                    <h4 class="card-title">List of Recipes</h4>
                 </div>
-
                 <div class="card-body">
                     <table class="table table-responsive table-hover w-100 d-block d-md-table"
                            th:if="${not #lists.isEmpty(recipes)}">
