--- a/src/main/resources/templates/recipe/ingredient/ingredientform.html
+++ b/src/main/resources/templates/recipe/ingredient/ingredientform.html
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <p class="text-right">
-                    <button type="submit" class="btn btn-primary text-right">Submit</button>
+                    <button type="submit" class="btn btn-primary">Submit</button>
                 </p>
             </form>
         </div>
