--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -10,19 +10,32 @@
         <div class="col-lg-9 mx-auto">
             <div class="card bg-light mb-3">
                 <div class="card-header">
-                    <a th:text="${recipe.description}">Recipe Description Here!</a>
+                    <div class="row">
+                        <div class="col-md-10">
+                            <a th:text="${recipe.description}">Recipe Description Here!</a>
+                        </div>
+                        <div class="col-md-2">
+                            <a class="btn btn-primary" href="#"
+                               th:href="@{'/recipe/' + ${recipe.id} + '/image'}" role="button">Change Image</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-3">
                             <a>Categories:</a>
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-md-3">
                             <ul>
                                 <li th:remove="all">cat one</li>
                                 <li th:remove="all">cat two</li>
                                 <li th:each="category : ${recipe.categories}" th:text="${category.getDescription()}" >cat three</li>
                             </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <img src="../../static/images/guacamole400x400WithX.jpg"
+                                 th:src="@{'/recipe/' + ${recipe.id} + '/recipeimage'}"
+                                 width="200" height="200">
                         </div>
                     </div>
                     <div class="row">
@@ -89,7 +102,8 @@
                                 <li th:each="ingredient : ${recipe.ingredients}"
                                     th:text="${(ingredient.getAmount() +
                                         ' ' + ingredient.uom.getDescription() +
-                                        ' - ' + ingredient.getDescription())}">1 Teaspoon of Sugar</li>
+                                        ' - ' + ingredient.getDescription())}">1 Teaspoon of Sugar
+                                </li>
                             </ul>
                         </div>
                     </div>
