--- a/src/main/resources/templates/recipe/recipeform.html
+++ b/src/main/resources/templates/recipe/recipeform.html
@@ -7,15 +7,24 @@
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row">
         <div class="col-lg-9 mx-auto">
-            <form  th:object="${recipe}" th:action="@{/recipe/}" method="post">
+            <form th:object="${recipe}" th:action="@{/recipe/}" method="post">
+                <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
+                    <a>Please Correct Errors Below</a>
+                </div>
                 <input type="hidden" th:field="*{id}"/>
                 <div class="card bg-light mb-3">
                     <div class="card-header">Edit Recipe Information</div>
                     <div class="card-body">
                         <div class="form-row">
-                            <div class="form-group col-md-8">
+                            <div class="col-md-8 form-control" th:class="${#fields.hasErrors('description')}
+                                ? 'col-md-8 form-group has-error' : 'col-md-8 form-group'">
                                 <label>Recipe Description:</label>
-                                <input type="text" class="form-control" th:field="*{description}"/>
+                                <input type="text" class="form-control" th:field="*{description}" th:errorclass="has-error"/>
+                                <span class="text-danger" th:if="${#fields.hasErrors('description')}">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('description')}" th:text="${err}"/>
+                                        </ul>
+                                </span>
                             </div>
                             <div class="col-md-4">
                                 <label>Categories:</label>
@@ -27,13 +36,25 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <div class="form-group col-md-4">
+                            <div class="form-group col-md-4" th:class="${#fields.hasErrors('description')}
+                                ? 'col-md-4 form-group has-error' : 'col-md-4 form-group'">
                                 <label>Prep Time:</label>
-                                <input type="text" class="form-control" th:field="*{prepTime}"/>
+                                <input type="text" class="form-control" th:field="*{prepTime}" th:errorclass="has-error"/>
+                                <span class="text-danger" th:if="${#fields.hasErrors('prepTime')}">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('prepTime')}" th:text="${err}"/>
+                                        </ul>
+                                </span>
                             </div>
-                            <div class="form-group col-md-4">
+                            <div class="col-md-4 form-group" th:class="${#fields.hasErrors('cookTime')}
+                                ? 'col-md-4 form-group has-error' : 'col-md-4 form-group'">
                                 <label>Cooktime:</label>
-                                <input type="text" class="form-control" th:field="*{cookTime}"/>
+                                <input type="text" class="form-control" th:field="*{cookTime}" th:errorclass="has-error"/>
+                                <span class="text-danger" th:if="${#fields.hasErrors('cookTime')}">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('cookTime')}" th:text="${err}"/>
+                                        </ul>
+                                </span>
                             </div>
                             <div class="form-group col-md-4">
                                 <label>Difficulty:</label>
@@ -46,17 +67,29 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <div class="form-group col-md-4">
+                            <div class="col-md-4 form-group" th:class="${#fields.hasErrors('servings')}
+                                ? 'col-md-4 form-group has-error' : 'col-md-4 form-group'">
                                 <label>Servings:</label>
-                                <input type="text" class="form-control" th:field="*{servings}"/>
+                                <input type="text" class="form-control" th:field="*{servings}" th:errorclass="has-error"/>
+                                <span class="text-danger" th:if="${#fields.hasErrors('servings')}">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('servings')}" th:text="${err}"/>
+                                        </ul>
+                                </span>
                             </div>
                             <div class="form-group col-md-4">
                                 <label>Source:</label>
                                 <input type="text" class="form-control" th:field="*{source}"/>
                             </div>
-                            <div class="form-group col-md-4">
+                            <div class="col-md-4 form-group" th:class="${#fields.hasErrors('url')}
+                                ? 'col-md-4 form-group has-error' : 'col-md-4 form-group'">
                                 <label>URL:</label>
-                                <input type="text" class="form-control" th:field="*{url}"/>
+                                <input type="text" class="form-control" th:field="*{url}" th:errorclass="has-error"/>
+                                <span class="text-danger" th:if="${#fields.hasErrors('url')}">
+                                        <ul>
+                                            <li th:each="err : ${#fields.errors('url')}" th:text="${err}"/>
+                                        </ul>
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -68,7 +101,8 @@
                                 <a>Ingredients</a>
                             </div>
                             <div class="col-md-1">
-                                <a class="btn btn-primary" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients'}" role="button">View</a>
+                                <a class="btn btn-default" href="#"
+                                   th:href="@{'/recipe/' + ${recipe.id} + '/ingredients'}" role="button">View</a>
                             </div>
                         </div>
                     </div>
@@ -106,7 +140,7 @@
                     </div>
                 </div>
                 <p class="text-right">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary">Submit</button>
                 </p>
             </form>
         </div>
