changed receipt title to Portuguese closes #4

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
                         <thead class="thead-light">
                         <tr>
                             <th>ID</th>
-                            <th>Description</th>
+                            <th>Descrição da Receita </th>
                             <th>View</th>
                             <th>Update</th>
                             <th>Delete</th>
